// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.delegatedui.api.infra.uiservice;

option java_package = "com.google.android.as.oss.delegatedui.api.infra.uiservice";
option java_multiple_files = true;

// Invalidates an active delegated UI session, causing it to re-render itself.
message DelegatedUiInvalidateRequest {
  // The delegated UI session to invalidate.
  string session_uuid = 1;
}

message DelegatedUiInvalidateResponse {
  // True if the active delegated UI session was successfully invalidated. False
  // if the session was not found.
  bool success = 1;
}
