// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.delegatedui.api.infra.uiservice;

option java_package = "com.google.android.as.oss.delegatedui.api.infra.uiservice";
option java_multiple_files = true;

// Remote UI reports a nested scroll event.
message DelegatedUiNestedScrollResponse {
  float scroll_x = 1;  // Deprecated.
  float scroll_y = 2;  // Deprecated.

  oneof event {
    NestedScrollStart nested_scroll_start = 3;
    NestedScrollDelta nested_scroll_delta = 4;
    NestedScrollStop nested_scroll_stop = 5;
  }
}

// Nested scrolling control signal: start.
message NestedScrollStart {
  int32 axes = 1;
}

// Nested scrolling delta.
message NestedScrollDelta {
  float scroll_x = 1;
  float scroll_y = 2;
}

// Nested scrolling control signal: stop. May include nested fling velocity.
message NestedScrollStop {
  float fling_x = 1;
  float fling_y = 2;
}

// Remote UI reports a nested fling event. Deprecated.
message DelegatedUiNestedFlingResponse {
  float velocity_x = 1;
  float velocity_y = 2;
}
