// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.delegatedui.api.infra.uiservice;

import "src/com/google/android/as/oss/delegatedui/api/common/common.proto";

option java_package = "com.google.android.as.oss.delegatedui.api.infra.uiservice";
option java_multiple_files = true;

// Update - send updates from client that that may impact the delegated UI
message DelegatedUiUpdateRequest {
  common.DelegatedUiClientInputs client_inputs = 1;
}

// Client needs to know when the update call has been handled, so send back an
// empty message.
message DelegatedUiUpdateResponse {}
