// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.delegatedui.api.integration.egress;

import "src/com/google/android/as/oss/delegatedui/api/integration/egress/airflow/airflow_egress_integration.proto";
import "src/com/google/android/as/oss/delegatedui/api/integration/egress/bugle/bugle_egress_integration.proto";
import "src/com/google/android/as/oss/delegatedui/api/integration/egress/example/example_egress_integration.proto";
import "src/com/google/android/as/oss/delegatedui/api/integration/egress/sundog/sundog_egress_integration.proto";

option java_package = "com.google.android.as.oss.delegatedui.api.integration.egress";
option java_multiple_files = true;

// Approved egress data formats from the delegated UI service.

message DelegatedUiEgressData {
  oneof egress_data {
    example.ExampleSourceClickEgressData example_source_click_egress_data = 1;
    bugle.BugleEgressData bugle_egress_data = 2;
    sundog.SundogEventClickEgressData sundog_event_click_egress_data = 3;
    sundog.SundogLocationClickEgressData sundog_location_click_egress_data = 4;
    airflow.AirflowEgressData airflow_egress_data = 6;
    // New CUJ data egress types should be added above.
  }
  reserved 5;
}
